fixed margins on mobile

--- a/static/less/layouts/base.less
+++ b/static/less/layouts/base.less
@@ -65,7 +65,7 @@ menu {
 
 @media (max-width: 800px) {
 	menu {
-		padding: 0px 40px;
+		padding: 0px 20px;
 	}
 }
 
@@ -147,8 +147,8 @@ main {
 
 		@media (max-width: 800px) {
 			div {
-				padding-left: 40px;
-				padding-right: 40px;
+				padding-left: 20px;
+				padding-right: 20px;
 				input {
 					display: none;
 				}
@@ -263,7 +263,7 @@ main {
 				max-width: 800px;
 				padding: 40px 0px;
 					@media (max-width: 800px) {
-						padding: 40px;
+						padding: 20px;
 					}
 			}
 
@@ -504,6 +504,6 @@ main {
 	}
 
 	@media (max-width: 800px) {
-		padding: 0px 40px;
+		padding: 0px 20px;
 	}
 }
